# SysY

./: .gitignore  Cargo.toml
src/: ast.rs  environment.rs  ir_gen.rs  label_gen.rs  main.rs  sym_table.rs  sysy.lalrpop
src/backend/: asm.rs  code_gen.rs  environment.rs  mod.rs  peekhole.rs  register.rs
src/frontend/: ast.rs  environment.rs  ir_gen.rs  label_gen.rs  mod.rs  sym_table.rs
src/opt/: dead_code_elimination.rs  funtion_inline.rs  mod.rs  ssa.rs
