[package]
name = "SysY"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koopa = "0.0.8"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
once_cell = "1.18.0"
[build-dependencies]
lalrpop = "0.19.7"
